microcatalog/k8s/products_service.yaml
{"variant":"standard","title":"products_service.yaml con ConfigMap","id":"81107"}
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: products_service:1.0
          ports:
            - containerPort: 8002
