microcatalog/k8s/fault-abort-auth.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: abort-auth
  namespace: default
spec:
  hosts:
  - auth-service
  http:
  - fault:
      abort:
        httpStatus: 503
        percentage:
          value: 100
    route:
    - destination:
        host: auth-service
        port:
          number: 8001
